# asteroids

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
src/: aabb.c  aabb.h  asteroid.c  asteroid.h  canvas.c  canvas.h  collision.c  collision.h  data.c  data.h  debug.c  debug.h  defines.h  draw.c  draw.h  entities.c  entities.h  game.c  game.h  gameover.c  gameover.h  highscores.c  highscores.h  initials.c  initials.h  input.c  input.h  leaderboard.c  level.c  level.h  loop.c  loop.h  main.c  mathdefs.h  mixer.c  mixer.h  options.h  sandbox.c  sandbox.h  shape.h  (+14 more)
web/: asteroids.html
